@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_margin="@dimen/activity_margin"
     tools:context="com.hp.dsg.stratus.SubscriptionListActivity">
 
     <ProgressBar
