@@ -1,0 +1,31 @@
+<?xml version="1.0" encoding="utf-8"?>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="?android:attr/listPreferredItemHeight"
+    android:id="@+id/subscriptionListItem">
+
+    <ImageView
+        android:id="@+id/subscriptionIconList"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/activity_margin"
+        android:contentDescription="@string/defaultSubscriptionIconDesc"
+        android:src="@drawable/ic_launcher" />
+
+    <TextView
+        android:id="@+id/subscriptionNameList"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignWithParentIfMissing="true"
+        android:layout_toLeftOf="@id/subscriptionIconList"
+        android:gravity="center_vertical"
+        android:text="@string/defaultSubscriptionName"
+        android:layout_marginLeft="@dimen/activity_margin"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+</RelativeLayout>
